--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ est-cost-per-meal = "csv_inv_order.est_cost_per_meal:run"
 new-month = "csv_inv_order.new_month:run"
 read-inv = "csv_inv_order.read_inv:run"
 record-purchases = "csv_inv_order.record_purchases:run"
-rows = "csv_inv_order.rows:run"
+inv-order-rows = "csv_inv_order.rows:run"
 set-bf-stats = "csv_inv_order.set_bf_stats:run"
 set-meeting-attendance = "csv_inv_order.set_meeting_attendance:run"
 set-min-max = "csv_inv_order.set_min_max:run"
-tables = "csv_inv_order.tables:run"
+inv-order-tables = "csv_inv_order.tables:run"
