--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,12 @@ create-inv-checklist = "csv_inv_order.create_inv_checklist:run"
 create-orders = "csv_inv_order.create_orders:run"
 create-POs = "csv_inv_order.create_POs:run"
 est-cost-per-meal = "csv_inv_order.est_cost_per_meal:run"
+inv-order-rows = "csv_inv_order.rows:run"
+inv-order-tables = "csv_inv_order.tables:run"
+monthly-stats = "csv_inv_order.monthly_stats:run"
 new-month = "csv_inv_order.new_month:run"
 read-inv = "csv_inv_order.read_inv:run"
 record-purchases = "csv_inv_order.record_purchases:run"
-inv-order-rows = "csv_inv_order.rows:run"
 set-bf-stats = "csv_inv_order.set_bf_stats:run"
 set-meeting-attendance = "csv_inv_order.set_meeting_attendance:run"
 set-min-max = "csv_inv_order.set_min_max:run"
-inv-order-tables = "csv_inv_order.tables:run"
