Started recalibrate.  Should be useful ... with human discernment!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ inv-order-tables = "csv_inv_order.tables:run"
 monthly-stats = "csv_inv_order.monthly_stats:run"
 new-month = "csv_inv_order.new_month:run"
 read-inv = "csv_inv_order.read_inv:run"
+recalibrate = "csv_inv_order.recalibrate:run"
 record-purchases = "csv_inv_order.record_purchases:run"
 set-bf-stats = "csv_inv_order.set_bf_stats:run"
 set-meeting-attendance = "csv_inv_order.set_meeting_attendance:run"
